pg_fsm.c

#line 1 "pg_fsm.rl"
#include "pg_fsm.h"
#pragma GCC diagnostic ignored "-Wimplicit-fallthrough"

typedef struct pg_fsm_t {
    const uint8_t *string;
    uint16_t cs;
    uint16_t data_row_count;
    uint16_t int2;
    uint16_t row_description_count;
    uint32_t int4;
    uint32_t result_len;
    uint8_t i;
} pg_fsm_t;


#line 19 "pg_fsm.c"
static const int pg_fsm_start = 397;


#line 183 "pg_fsm.rl"


size_t pg_fsm_execute(pg_fsm_t *m, const pg_fsm_cb_t *f, const void *u, const uint8_t *p, const uint8_t *pe) {
    const uint8_t *b = p;
    const uint8_t *eof = pe;
    
#line 30 "pg_fsm.c"
	{
	if ( p == pe )
		goto _test_eof;
	goto _resume;

_again:
	switch (  m->cs ) {
		case 397: goto st397;
		case 0: goto st0;
		case 1: goto st1;
		case 2: goto st2;
		case 3: goto st3;
		case 4: goto st4;
		case 5: goto st5;
		case 6: goto st6;
		case 7: goto st7;
		case 8: goto st8;
		case 9: goto st9;
		case 10: goto st10;
		case 11: goto st11;
		case 12: goto st12;
		case 13: goto st13;
		case 14: goto st14;
		case 15: goto st15;
		case 16: goto st16;
		case 17: goto st17;
		case 18: goto st18;
		case 19: goto st19;
		case 20: goto st20;
		case 21: goto st21;
		case 22: goto st22;
		case 23: goto st23;
		case 24: goto st24;
		case 25: goto st25;
		case 26: goto st26;
		case 27: goto st27;
		case 28: goto st28;
		case 29: goto st29;
		case 30: goto st30;
		case 31: goto st31;
		case 32: goto st32;
		case 33: goto st33;
		case 34: goto st34;
		case 35: goto st35;
		case 36: goto st36;
		case 37: goto st37;
		case 38: goto st38;
		case 39: goto st39;
		case 40: goto st40;
		case 398: goto st398;
		case 41: goto st41;
		case 42: goto st42;
		case 43: goto st43;
		case 44: goto st44;
		case 45: goto st45;
		case 46: goto st46;
		case 47: goto st47;
		case 48: goto st48;
		case 49: goto st49;
		case 50: goto st50;
		case 51: goto st51;
		case 52: goto st52;
		case 53: goto st53;
		case 54: goto st54;
		case 55: goto st55;
		case 56: goto st56;
		case 57: goto st57;
		case 58: goto st58;
		case 59: goto st59;
		case 60: goto st60;
		case 61: goto st61;
		case 62: goto st62;
		case 63: goto st63;
		case 64: goto st64;
		case 65: goto st65;
		case 66: goto st66;
		case 67: goto st67;
		case 68: goto st68;
		case 69: goto st69;
		case 70: goto st70;
		case 71: goto st71;
		case 72: goto st72;
		case 73: goto st73;
		case 74: goto st74;
		case 75: goto st75;
		case 76: goto st76;
		case 77: goto st77;
		case 78: goto st78;
		case 79: goto st79;
		case 80: goto st80;
		case 81: goto st81;
		case 82: goto st82;
		case 83: goto st83;
		case 84: goto st84;
		case 85: goto st85;
		case 86: goto st86;
		case 87: goto st87;
		case 88: goto st88;
		case 89: goto st89;
		case 399: goto st399;
		case 90: goto st90;
		case 91: goto st91;
		case 92: goto st92;
		case 93: goto st93;
		case 94: goto st94;
		case 95: goto st95;
		case 96: goto st96;
		case 97: goto st97;
		case 98: goto st98;
		case 99: goto st99;
		case 100: goto st100;
		case 101: goto st101;
		case 102: goto st102;
		case 103: goto st103;
		case 104: goto st104;
		case 105: goto st105;
		case 106: goto st106;
		case 107: goto st107;
		case 108: goto st108;
		case 109: goto st109;
		case 110: goto st110;
		case 111: goto st111;
		case 112: goto st112;
		case 113: goto st113;
		case 114: goto st114;
		case 115: goto st115;
		case 116: goto st116;
		case 117: goto st117;
		case 118: goto st118;
		case 119: goto st119;
		case 120: goto st120;
		case 121: goto st121;
		case 122: goto st122;
		case 123: goto st123;
		case 124: goto st124;
		case 125: goto st125;
		case 126: goto st126;
		case 400: goto st400;
		case 127: goto st127;
		case 128: goto st128;
		case 129: goto st129;
		case 130: goto st130;
		case 131: goto st131;
		case 132: goto st132;
		case 133: goto st133;
		case 134: goto st134;
		case 135: goto st135;
		case 136: goto st136;
		case 137: goto st137;
		case 138: goto st138;
		case 139: goto st139;
		case 140: goto st140;
		case 141: goto st141;
		case 142: goto st142;
		case 143: goto st143;
		case 144: goto st144;
		case 145: goto st145;
		case 146: goto st146;
		case 147: goto st147;
		case 148: goto st148;
		case 149: goto st149;
		case 150: goto st150;
		case 151: goto st151;
		case 152: goto st152;
		case 153: goto st153;
		case 154: goto st154;
		case 155: goto st155;
		case 156: goto st156;
		case 157: goto st157;
		case 158: goto st158;
		case 159: goto st159;
		case 160: goto st160;
		case 161: goto st161;
		case 162: goto st162;
		case 163: goto st163;
		case 164: goto st164;
		case 165: goto st165;
		case 166: goto st166;
		case 167: goto st167;
		case 168: goto st168;
		case 169: goto st169;
		case 170: goto st170;
		case 171: goto st171;
		case 172: goto st172;
		case 173: goto st173;
		case 174: goto st174;
		case 175: goto st175;
		case 176: goto st176;
		case 177: goto st177;
		case 178: goto st178;
		case 179: goto st179;
		case 180: goto st180;
		case 181: goto st181;
		case 182: goto st182;
		case 183: goto st183;
		case 184: goto st184;
		case 185: goto st185;
		case 186: goto st186;
		case 187: goto st187;
		case 188: goto st188;
		case 189: goto st189;
		case 190: goto st190;
		case 191: goto st191;
		case 192: goto st192;
		case 193: goto st193;
		case 194: goto st194;
		case 195: goto st195;
		case 196: goto st196;
		case 197: goto st197;
		case 198: goto st198;
		case 199: goto st199;
		case 200: goto st200;
		case 201: goto st201;
		case 202: goto st202;
		case 203: goto st203;
		case 204: goto st204;
		case 205: goto st205;
		case 206: goto st206;
		case 207: goto st207;
		case 208: goto st208;
		case 209: goto st209;
		case 210: goto st210;
		case 211: goto st211;
		case 212: goto st212;
		case 213: goto st213;
		case 214: goto st214;
		case 215: goto st215;
		case 216: goto st216;
		case 217: goto st217;
		case 218: goto st218;
		case 219: goto st219;
		case 220: goto st220;
		case 221: goto st221;
		case 222: goto st222;
		case 223: goto st223;
		case 224: goto st224;
		case 225: goto st225;
		case 226: goto st226;
		case 227: goto st227;
		case 228: goto st228;
		case 229: goto st229;
		case 230: goto st230;
		case 231: goto st231;
		case 232: goto st232;
		case 233: goto st233;
		case 234: goto st234;
		case 235: goto st235;
		case 236: goto st236;
		case 237: goto st237;
		case 238: goto st238;
		case 239: goto st239;
		case 240: goto st240;
		case 241: goto st241;
		case 242: goto st242;
		case 243: goto st243;
		case 244: goto st244;
		case 245: goto st245;
		case 246: goto st246;
		case 247: goto st247;
		case 248: goto st248;
		case 249: goto st249;
		case 250: goto st250;
		case 251: goto st251;
		case 252: goto st252;
		case 253: goto st253;
		case 254: goto st254;
		case 255: goto st255;
		case 256: goto st256;
		case 257: goto st257;
		case 258: goto st258;
		case 259: goto st259;
		case 260: goto st260;
		case 261: goto st261;
		case 262: goto st262;
		case 263: goto st263;
		case 264: goto st264;
		case 265: goto st265;
		case 266: goto st266;
		case 267: goto st267;
		case 268: goto st268;
		case 269: goto st269;
		case 270: goto st270;
		case 271: goto st271;
		case 272: goto st272;
		case 273: goto st273;
		case 274: goto st274;
		case 275: goto st275;
		case 276: goto st276;
		case 277: goto st277;
		case 278: goto st278;
		case 279: goto st279;
		case 280: goto st280;
		case 281: goto st281;
		case 282: goto st282;
		case 283: goto st283;
		case 284: goto st284;
		case 285: goto st285;
		case 286: goto st286;
		case 287: goto st287;
		case 288: goto st288;
		case 289: goto st289;
		case 290: goto st290;
		case 291: goto st291;
		case 292: goto st292;
		case 293: goto st293;
		case 294: goto st294;
		case 295: goto st295;
		case 296: goto st296;
		case 297: goto st297;
		case 298: goto st298;
		case 299: goto st299;
		case 300: goto st300;
		case 301: goto st301;
		case 302: goto st302;
		case 303: goto st303;
		case 304: goto st304;
		case 305: goto st305;
		case 306: goto st306;
		case 307: goto st307;
		case 308: goto st308;
		case 309: goto st309;
		case 310: goto st310;
		case 311: goto st311;
		case 312: goto st312;
		case 313: goto st313;
		case 314: goto st314;
		case 315: goto st315;
		case 316: goto st316;
		case 317: goto st317;
		case 318: goto st318;
		case 319: goto st319;
		case 320: goto st320;
		case 321: goto st321;
		case 322: goto st322;
		case 323: goto st323;
		case 324: goto st324;
		case 325: goto st325;
		case 326: goto st326;
		case 327: goto st327;
		case 328: goto st328;
		case 329: goto st329;
		case 330: goto st330;
		case 331: goto st331;
		case 332: goto st332;
		case 333: goto st333;
		case 334: goto st334;
		case 335: goto st335;
		case 336: goto st336;
		case 337: goto st337;
		case 338: goto st338;
		case 339: goto st339;
		case 340: goto st340;
		case 341: goto st341;
		case 342: goto st342;
		case 343: goto st343;
		case 344: goto st344;
		case 345: goto st345;
		case 346: goto st346;
		case 347: goto st347;
		case 348: goto st348;
		case 349: goto st349;
		case 350: goto st350;
		case 351: goto st351;
		case 352: goto st352;
		case 353: goto st353;
		case 354: goto st354;
		case 355: goto st355;
		case 356: goto st356;
		case 357: goto st357;
		case 358: goto st358;
		case 359: goto st359;
		case 360: goto st360;
		case 361: goto st361;
		case 362: goto st362;
		case 363: goto st363;
		case 364: goto st364;
		case 365: goto st365;
		case 366: goto st366;
		case 367: goto st367;
		case 368: goto st368;
		case 369: goto st369;
		case 370: goto st370;
		case 371: goto st371;
		case 372: goto st372;
		case 373: goto st373;
		case 374: goto st374;
		case 375: goto st375;
		case 376: goto st376;
		case 377: goto st377;
		case 378: goto st378;
		case 379: goto st379;
		case 380: goto st380;
		case 381: goto st381;
		case 382: goto st382;
		case 383: goto st383;
		case 384: goto st384;
		case 385: goto st385;
		case 386: goto st386;
		case 387: goto st387;
		case 388: goto st388;
		case 389: goto st389;
		case 390: goto st390;
		case 391: goto st391;
		case 392: goto st392;
		case 393: goto st393;
		case 394: goto st394;
		case 395: goto st395;
		case 396: goto st396;
	default: break;
	}

	if ( ++p == pe )
		goto _test_eof;
_resume:
	switch (  m->cs )
	{
tr4:
#line 82 "pg_fsm.rl"
	{ if (f->parse_complete(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr8:
#line 30 "pg_fsm.rl"
	{ if (f->bind_complete(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr12:
#line 31 "pg_fsm.rl"
	{ if (f->close_complete(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr24:
#line 64 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->notification_response_extra(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; if (p != eof) if (f->notification_response_done(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr30:
#line 33 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->command_complete_val(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr110:
#line 39 "pg_fsm.rl"
	{ if (f->empty_query_response(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr122:
#line 61 "pg_fsm.rl"
	{ if (!m->i) { m->i = sizeof(m->int4); m->int4 = 0; } m->int4 |= *p << ((2 << 2) * --m->i); }
#line 28 "pg_fsm.rl"
	{ if (f->backend_key_data_key(u, m->int4)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr135:
#line 23 "pg_fsm.rl"
	{ if (f->authentication_ok(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr136:
#line 21 "pg_fsm.rl"
	{ if (f->authentication_cleartext_password(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr172:
#line 68 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_application_name(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr189:
#line 69 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_client_encoding(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr201:
#line 70 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_datestyle(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr231:
#line 71 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_default_transaction_read_only(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr253:
#line 74 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_integer_datetimes(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr264:
#line 75 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_intervalstyle(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr278:
#line 73 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_in_hot_standby(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr291:
#line 76 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_is_superuser(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr311:
#line 77 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_server_encoding(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr320:
#line 78 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_server_version(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr341:
#line 79 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_session_authorization(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr369:
#line 80 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_standard_conforming_strings(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr379:
#line 81 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->parameter_status_timezone(u, p - m->string, m->string)) {p++;  m->cs = 397; goto _out;} m->string = NULL; }
	goto st397;
tr406:
	 m->cs = 397;
#line 92 "pg_fsm.rl"
	{ if (f->row_description_format(u, 0)) {p++; goto _out;} if (!--m->row_description_count)  m->cs = 397; else  m->cs = 356; }
	goto _again;
tr415:
#line 85 "pg_fsm.rl"
	{ if (f->ready_for_query_state(u, pg_ready_for_query_state_inerror)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr416:
#line 83 "pg_fsm.rl"
	{ if (f->ready_for_query_state(u, pg_ready_for_query_state_idle)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr417:
#line 86 "pg_fsm.rl"
	{ if (f->ready_for_query_state(u, pg_ready_for_query_state_intrans)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr421:
#line 35 "pg_fsm.rl"
	{ if (f->copy_done(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
tr429:
#line 62 "pg_fsm.rl"
	{ if (f->no_data(u)) {p++;  m->cs = 397; goto _out;} }
	goto st397;
st397:
	if ( ++p == pe )
		goto _test_eof397;
case 397:
#line 566 "pg_fsm.c"
	switch( (*p) ) {
		case 49u: goto st1;
		case 50u: goto st5;
		case 51u: goto st9;
		case 65u: goto st13;
		case 67u: goto st25;
		case 68u: goto st31;
		case 69u: goto st41;
		case 72u: goto st83;
		case 73u: goto st91;
		case 75u: goto st95;
		case 78u: goto st107;
		case 82u: goto st111;
		case 83u: goto st127;
		case 84u: goto st350;
		case 86u: goto st376;
		case 90u: goto st380;
		case 99u: goto st385;
		case 100u: goto st389;
		case 110u: goto st393;
	}
	goto st0;
st0:
 m->cs = 0;
	goto _out;
tr451:
#line 22 "pg_fsm.rl"
	{ if (m->string && p - m->string > 0 && f->authentication_md5_password(u, p - m->string, m->string)) {p++;  m->cs = 1; goto _out;} m->string = NULL; }
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 600 "pg_fsm.c"
	if ( (*p) == 0u )
		goto st2;
	goto st0;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 0u )
		goto st3;
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 0u )
		goto st4;
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 4u )
		goto tr4;
	goto st0;
tr452:
#line 22 "pg_fsm.rl"
